Closed Bug 1392483 Opened 7 years ago Closed 7 years ago

All builds will be busted when Gecko 57 merges to Beta on 2017-09-20

Categories

(Core :: XPCOM, defect)

defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla57
Tracking Status
firefox57 - verified

People

(Reporter: RyanVM, Assigned: mccr8)

References

Details

Attachments

(1 file)

[Tracking Requested - why for this release]: Broken builds on the next merge day.

Please fix this ASAP since it blocks finding any other test bustage in the mean time.

https://treeherder.mozilla.org/logviewer.html#?job_id=124742138&repo=try

/home/worker/workspace/build/src/xpcom/threads/nsThread.h:108:54: error: 'mNextIdleDeadline' was not declared in this scope
/home/worker/workspace/build/src/xpcom/threads/nsThread.h:108:73: error: control reaches end of non-void function [-Werror=return-type
Flags: needinfo?(wmccloskey)
Sorry, I should have noted that the patch below is all that's needed to reproduce:
https://hg.mozilla.org/try/rev/29b9b0554ddf5031f0300418676dc01624c41a6f
I'm taking a look at this. Hopefully it won't be too hard to fix.
Assignee: nobody → continuation
Flags: needinfo?(wmccloskey)
This is pretty ugly but it works. Maybe in the long run there should be a nicer way to deal with these fields not always being around (like a setter that just does nothing outside of Nightly).
Comment on attachment 8900009 [details]
Bug 1392483 - ifdef out mNextIdleDeadline in a few more places.

https://reviewboard.mozilla.org/r/171332/#review176554

We don't have a good solution for this sort of thing, and having a `NightlyOrBeta<T>` type or something like that would consume space in release builds.  You could stuff it in an inherited-from class, which wouldn't consume space, but that's a little awkward...maybe that would help people more tightly compartimentalize functionality?
Attachment #8900009 - Flags: review?(nfroyd) → review+
Comment on attachment 8900009 [details]
Bug 1392483 - ifdef out mNextIdleDeadline in a few more places.

This doesn't appear to work, unfortunately. Just moves the bustage to SchedulerGroup.cpp.
https://treeherder.mozilla.org/logviewer.html#?job_id=125036424&repo=try
Flags: needinfo?(continuation)
Attachment #8900009 - Flags: feedback-
Comment on attachment 8900009 [details]
Bug 1392483 - ifdef out mNextIdleDeadline in a few more places.

Nevermind, those failures are there even when I use the cobbled-together backout patch I used last night.

Interestingly, those failures only happen on Linux builds and only when the EARLY_BETA_OR_EARLIER flag is reset - i.e. https://hg.mozilla.org/try/rev/e99b9c1810d9624b644ad1d67439f7eae985f667 (which normally happens around the halfway point of the cycle). Anyway, I'll file the bug and follow-up there.
Flags: needinfo?(continuation)
Attachment #8900009 - Flags: feedback- → feedback+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/dbabaeec0fbc
ifdef out mNextIdleDeadline in a few more places. r=froydnj
https://hg.mozilla.org/mozilla-central/rev/dbabaeec0fbc
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: