Bug 1392483 - ifdef out mNextIdleDeadline in a few more places. r=froydnj

MozReview-Commit-ID: D9bW4jEHlhl

--HG--
extra : rebase_source : a5a67943b389e5f54b80ee60ab2c60aa4d3f8205